greenfoot/simkomdig.1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files (x86)\Greenfoot\lib\bluejcore.jar;C:\Program Files (x86)\Greenfoot\lib\bluejeditor.jar;C:\Program Files (x86)\Greenfoot\lib\bluejext.jar;C:\Program Files (x86)\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files (x86)\Greenfoot\lib\junit-4.8.2.jar;C:\Program Files (x86)\Greenfoot\lib\bluej.jar;C:\Program Files (x86)\Greenfoot\lib\commons-httpclient-3.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files (x86)\Greenfoot\lib\commons-codec-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\jl1.0.1.jar;C:\Program Files (x86)\Greenfoot\lib\opencsv-2.3.jar;C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1
-d
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java
<---- end of javadoc command ---->
Loading source file C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java...
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:16: error: illegal start of expression
    public bg()
    ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:16: error: ';' expected
    public bg()
          ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:16: error: illegal start of type
    public bg()
             ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:16: error: <identifier> expected
    public bg()
              ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:16: error: ';' expected
    public bg()
               ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:19: error: illegal start of type
        super(600, 400, 1); 
        ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:19: error: <identifier> expected
        super(600, 400, 1); 
             ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:19: error: ';' expected
        super(600, 400, 1); 
              ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:19: error: illegal start of type
        super(600, 400, 1); 
                 ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:19: error: <identifier> expected
        super(600, 400, 1); 
                  ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:19: error: <identifier> expected
        super(600, 400, 1); 
                       ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:19: error: illegal start of type
        super(600, 400, 1); 
                         ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:19: error: <identifier> expected
        super(600, 400, 1); 
                          ^
C:\Users\ASUS\Videos\lagu slow\arkademy\greenfoot\simkomdig.1\bg.java:19: error: ';' expected
        super(600, 400, 1); 
                           ^
14 errors
